<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".All_vid">
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/link1"
        android:visibility="visible"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/submit" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/link2"
        android:layout_alignParentRight="true" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="187dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/link3"
        android:layout_alignParentRight="true" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="208dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/link4"
        android:layout_alignParentRight="true" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="144dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/link5"
        android:layout_alignParentRight="true" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="73dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/link6"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="139dp"
        android:layout_marginTop="11dp"
        android:text="@string/upload_urls"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="139dp" />
</RelativeLayout>